Add href links to each logo in The Logos Section

--- a/_includes/logos.html
+++ b/_includes/logos.html
@@ -4,97 +4,97 @@
 <section class="logos container">
 
     <div class="logos__row row">
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.apple.com/" target="_blank">
         <div class="logos__logo brands-apple"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank">
         <div class="logos__logo brands-html5"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.kfc.co.uk/" target="_blank">
         <div class="logos__logo brands-kfc"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="http://www.getmiro.com/" target="_blank">
         <div class="logos__logo brands-18"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="http://www.volkswagen.co.uk/" target="_blank">
         <div class="logos__logo brands-vw"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.ups.com/" target="_blank">
         <div class="logos__logo brands-ups"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.ubuntu.com/" target="_blank">
         <div class="logos__logo brands-ubuntu"></div>
       </a><!-- .logos-item -->
     </div><!-- .logos__row -->
 
     <div class="logos__row row">
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.teamspeak.com/" target="_blank">
         <div class="logos__logo brands-teamspeak"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.playstation.com/" target="_blank">
         <div class="logos__logo brands-playstation"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.microsoft.com/" target="_blank">
         <div class="logos__logo brands-microsoft"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.bosch.co.uk/" target="_blank">
         <div class="logos__logo brands-bosh"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://allegro.pl/" target="_blank">
         <div class="logos__logo brands-allegro"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.shell.co.uk/" target="_blank">
         <div class="logos__logo brands-shell"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.nivea.co.uk/" target="_blank">
         <div class="logos__logo brands-nivea"></div>
       </a><!-- .logos-item -->
     </div><!-- .logos__row -->
 
     <div class="logos__row row">
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.lg.com/" target="_blank">
         <div class="logos__logo brands-lg"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.instagram.com/" target="_blank">
         <div class="logos__logo brands-insta"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www8.hp.com/us/en/home.html" target="_blank">
         <div class="logos__logo brands-hp"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://store.steampowered.com/app/70/HalfLife/" target="_blank">
         <div class="logos__logo brands-hf2"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.dell.com/" target="_blank">
         <div class="logos__logo brands-dell"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="http://www.coolermaster.com/" target="_blank">
         <div class="logos__logo brands-cooler-master"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.android.com/" target="_blank">
         <div class="logos__logo brands-android"></div>
       </a><!-- .logos-item -->
     </div><!-- .logos__row -->
 
     <div class="logos__row row">
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.avg.com/" target="_blank">
         <div class="logos__logo brands-avg"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.mitsubishi-cars.co.uk/" target="_blank">
         <div class="logos__logo brands-19"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://wordpress.org" target="_blank">
         <div class="logos__logo brands-17"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.intel.co.uk/" target="_blank">
         <div class="logos__logo brands-intel"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.ea.com/" target="_blank">
         <div class="logos__logo brands-ea"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.amd.com/" target="_blank">
         <div class="logos__logo brands-amd"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="#" target="_blank">
+      <a class="logos__item" href="https://www.nike.com/" target="_blank">
         <div class="logos__logo brands-nike"></div>
       </a><!-- .logos-item -->
     </div><!-- .logos__row -->
