Add a setInterval function that changes highlighted tile every 2 sec

--- a/_includes/projects-list.html
+++ b/_includes/projects-list.html
@@ -14,7 +14,7 @@
   </div><!-- .projects__row -->
   <div class="projects__row row">
     <a class="projects__item projects__item--2-1" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--2-2" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--active projects__item--2-2" href="#" target="_blank"></a>
     <a class="projects__item projects__item--2-3" href="#" target="_blank"></a>
     <a class="projects__item projects__item--2-4" href="#" target="_blank"></a>
     <a class="projects__item projects__item--2-5" href="#" target="_blank"></a>
