--- a/_includes/projects-list.html
+++ b/_includes/projects-list.html
@@ -4,36 +4,36 @@
 <section class="projects container-fluid">
 
   <div class="projects__row row">
-    <a class="projects__item projects__item--1-1" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--1-2" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--1-3" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--1-4" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--1-5" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--1-6" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--1-7" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--1-1" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--1-2" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--1-3" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--1-4" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--1-5" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--1-6" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--1-7" href="http://printwiki.org/Dummy" target="_blank"></a>
   </div><!-- .projects__row -->
   <div class="projects__row row">
-    <a class="projects__item projects__item--2-1" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--active projects__item--2-2" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--2-3" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--2-4" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--2-5" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--2-6" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--2-7" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--2-1" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--active projects__item--2-2" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--2-3" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--2-4" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--2-5" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--2-6" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--2-7" href="http://printwiki.org/Dummy" target="_blank"></a>
   </div><!-- .projects__row -->
   <div class="projects__row row">
-    <a class="projects__item projects__item--3-1" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--3-2" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--3-3" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--3-4" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--3-5" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--3-6" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--3-7" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--3-1" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--3-2" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--3-3" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--3-4" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--3-5" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--3-6" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--3-7" href="http://printwiki.org/Dummy" target="_blank"></a>
   </div><!-- .projects__row -->
   <div class="projects__row row">
-    <a class="projects__item projects__item--4-1" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--4-2" href="#" target="_blank"></a>
-    <a class="projects__item projects__item--4-3" href="#" target="_blank"></a>
+    <a class="projects__item projects__item--4-1" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--4-2" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--4-3" href="http://printwiki.org/Dummy" target="_blank"></a>
   </div><!-- .projects__row -->
 
 </section>
