Adjust the Projects Section Random Highlight code to fit the Logos Section as well

--- a/_includes/logos.html
+++ b/_includes/logos.html
@@ -31,7 +31,7 @@
       <a class="logos__item" href="https://www.teamspeak.com/" target="_blank">
         <div class="logos__logo brands-teamspeak"></div>
       </a><!-- .logos-item -->
-      <a class="logos__item" href="https://www.playstation.com/" target="_blank">
+      <a class="logos__item logos__item--active" href="https://www.playstation.com/" target="_blank">
         <div class="logos__logo brands-playstation"></div>
       </a><!-- .logos-item -->
       <a class="logos__item" href="https://www.microsoft.com/" target="_blank">
