--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -19,3 +19,9 @@ $member-border-triangle: 4rem solid $bg-color
 
 // Borders
 $logos-border: 1px solid rgba(0,0,0,.05)
+
+// Mixins
+@mixin outline
+  box-shadow: 0 0 .2rem .2rem #111, inset 0 0 .1rem .1rem #111
+  border-radius: .1rem
+  padding: .3rem
