Add a Video Background to the Hero Section
Video Backgroud will only be seen on devices using pointer.
All other devices will use art-direction background images.

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -3,6 +3,12 @@
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
 <section class="hero" id="home">
 
+  <video autoplay muted loop class="hero__video" poster="{{site.baseurl}}/assets/video/Bootstrap4_challenge_video.jpg">
+    <source src="{{site.baseurl}}/assets/video/Bootstrap4_challenge_video.webm" type="video/webm">
+    <source src="{{site.baseurl}}/assets/video/Bootstrap4_challenge_video.mp4" type="video/mp4">
+    <source src="{{site.baseurl}}/assets/video/Bootstrap4_challenge_video.ogv" type="video/ogg">
+  </video>
+
   <div class="lead">
     <p class="lead__text">Need our help?</p>
     <h1 class="lead__title">Top designers</h1>
