--- a/assets/css/3-sections/_hero.sass
+++ b/assets/css/3-sections/_hero.sass
@@ -4,6 +4,8 @@
   flex-direction: column
   justify-content: center
   align-items: center
+  position: relative
+  overflow: hidden
   background:
     color: #090909
     size: cover
@@ -20,6 +22,31 @@
   @include artDir('../img/bgs/hero/1600x620', 75em) // 1200px
   @include artDir('../img/bgs/hero/maxx620', 100em) // 1600px
   /* END of Media Queries for the responsive background */
+  
+  &__video
+    display: none
+
+  @media (pointer: fine)
+    background: rgba(0, 0, 0, .5) url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAF0lEQVQIW2NkYGD4z8DAwMgAI0AMDA4AI3EBBCKrOnQAAAAASUVORK5CYII=');
+
+    &__video
+      display: flex
+      position: absolute
+      top: 50%
+      left: 100%
+      width: auto
+      min-width: 100%
+      height: auto
+      min-height: 100%
+      transform: translateX(-50%) translateY(-50%)
+      z-index: -1
+
+      // 576px
+      @media (min-width: 36em)
+        left: 80%
+      // 816px
+      @media (min-width: 51em)
+        left: 50%
 
   &__btn
     font-size: 1.4rem
