--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,6 +29,6 @@
 
   <div class="footer__copyrights">
     <p>Copyright &copy; DSGN free use!</p>
-    <p>Hand crafted by <a href="http://paulthedeveloper.com/" target="_blank">Paul The Developer</a></p>
+    <p>Hand crafted by <a class="footer__copyrights-link" href="http://paulthedeveloper.com/" target="_blank">Paul The Developer</a></p>
   </div><!-- .footer__copyrights -->
 </footer>
