--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -12,6 +12,10 @@
     margin-top: 1rem
     margin-bottom: 1rem
 
+    &:focus
+      margin-left: -.3rem
+      @include outline($outline-color)
+
   &__nav-link
     display: block
     padding-top: .9rem
