--- a/assets/css/3-sections/_logos.sass
+++ b/assets/css/3-sections/_logos.sass
@@ -28,7 +28,7 @@
     animation: pulse .3s ease-in-out
 
   &:focus
-    @include outline
+    @include outline($outline-alternative-color)
     filter: grayscale(.9) opacity(1)
     animation: pulse .3s ease-in-out
 
