--- a/assets/css/3-sections/_projects-list.sass
+++ b/assets/css/3-sections/_projects-list.sass
@@ -48,7 +48,7 @@
       opacity: 1
 
   &:focus
-    @include outline
+    @include outline($outline-alternative-color)
     filter: grayscale(.9) opacity(1)
     animation: pulse .3s ease-in-out
 
