--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,22 +17,22 @@
         
         <ul class="social social--desktop">
           <li class="social__item">
-            <a href="https://www.facebook.com/" target="_blank" class="social__link">
-              <div class="fab fa-facebook-f"></div>
+            <a href="https://www.facebook.com/" target="_blank" class="social__link" title="facebook">
+              <div class="fab fa-facebook-f"><span class="visuallyhidden">facebook</></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
           <li class="social__item">
-            <a href="https://www.instagram.com/" target="_blank" class="social__link">
+            <a href="https://www.instagram.com/" target="_blank" class="social__link" title="instagram">
               <div class="fab fa-instagram"></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
           <li class="social__item">
-            <a href="https://twitter.com/" target="_blank" class="social__link">
+            <a href="https://twitter.com/" target="_blank" class="social__link" title="twitter">
               <div class="fab fa-twitter"></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
           <li class="social__item">
-            <a href="https://uk.linkedin.com/" target="_blank" class="social__link">
+            <a href="https://uk.linkedin.com/" target="_blank" class="social__link" title="linkedin">
               <div class="fab fa-linkedin"></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
@@ -48,22 +48,22 @@
 
           <ul class="social social--mobile">
             <li class="social__item">
-              <a href="https://www.facebook.com/" target="_blank" class="social__link">
+              <a href="https://www.facebook.com/" target="_blank" class="social__link" title="facebook">
                 <div class="fab fa-facebook-f"></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
             <li class="social__item">
-              <a href="https://www.instagram.com/" target="_blank" class="social__link">
+              <a href="https://www.instagram.com/" target="_blank" class="social__link" title="instagram">
                 <div class="fab fa-instagram"></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
             <li class="social__item">
-              <a href="https://twitter.com/" target="_blank" class="social__link">
+              <a href="https://twitter.com/" target="_blank" class="social__link" title="twitter">
                 <div class="fab fa-twitter"></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
             <li class="social__item">
-              <a href="https://uk.linkedin.com/" target="_blank" class="social__link">
+              <a href="https://uk.linkedin.com/" target="_blank" class="social__link" title="linkedin">
                 <div class="fab fa-linkedin"></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
