--- a/_includes/projects-list.html
+++ b/_includes/projects-list.html
@@ -4,36 +4,36 @@
 <section class="projects container-fluid">
 
   <div class="projects__row row">
-    <a class="projects__item projects__item--1-1" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--1-2" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--1-3" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--1-4" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--1-5" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--1-6" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--1-7" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--1-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 1"></a>
+    <a class="projects__item projects__item--1-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 2"></a>
+    <a class="projects__item projects__item--1-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 3"></a>
+    <a class="projects__item projects__item--1-4" href="http://printwiki.org/Dummy" target="_blank" title="My Project 4"></a>
+    <a class="projects__item projects__item--1-5" href="http://printwiki.org/Dummy" target="_blank" title="My Project 5"></a>
+    <a class="projects__item projects__item--1-6" href="http://printwiki.org/Dummy" target="_blank" title="My Project 6"></a>
+    <a class="projects__item projects__item--1-7" href="http://printwiki.org/Dummy" target="_blank" title="My Project 7"></a>
   </div><!-- .projects__row -->
   <div class="projects__row row">
-    <a class="projects__item projects__item--2-1" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--active projects__item--2-2" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--2-3" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--2-4" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--2-5" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--2-6" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--2-7" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--2-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 8"></a>
+    <a class="projects__item projects__item--active projects__item--2-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 8"></a>
+    <a class="projects__item projects__item--2-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 9"></a>
+    <a class="projects__item projects__item--2-4" href="http://printwiki.org/Dummy" target="_blank" title="My Project 10"></a>
+    <a class="projects__item projects__item--2-5" href="http://printwiki.org/Dummy" target="_blank" title="My Project 12"></a>
+    <a class="projects__item projects__item--2-6" href="http://printwiki.org/Dummy" target="_blank" title="My Project 13"></a>
+    <a class="projects__item projects__item--2-7" href="http://printwiki.org/Dummy" target="_blank" title="My Project 14"></a>
   </div><!-- .projects__row -->
   <div class="projects__row row">
-    <a class="projects__item projects__item--3-1" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--3-2" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--3-3" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--3-4" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--3-5" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--3-6" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--3-7" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--3-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 15"></a>
+    <a class="projects__item projects__item--3-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 16"></a>
+    <a class="projects__item projects__item--3-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 17"></a>
+    <a class="projects__item projects__item--3-4" href="http://printwiki.org/Dummy" target="_blank" title="My Project 18"></a>
+    <a class="projects__item projects__item--3-5" href="http://printwiki.org/Dummy" target="_blank" title="My Project 19"></a>
+    <a class="projects__item projects__item--3-6" href="http://printwiki.org/Dummy" target="_blank" title="My Project 20"></a>
+    <a class="projects__item projects__item--3-7" href="http://printwiki.org/Dummy" target="_blank" title="My Project 21"></a>
   </div><!-- .projects__row -->
   <div class="projects__row row">
-    <a class="projects__item projects__item--4-1" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--4-2" href="http://printwiki.org/Dummy" target="_blank"></a>
-    <a class="projects__item projects__item--4-3" href="http://printwiki.org/Dummy" target="_blank"></a>
+    <a class="projects__item projects__item--4-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 22"></a>
+    <a class="projects__item projects__item--4-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 23"></a>
+    <a class="projects__item projects__item--4-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 24"></a>
   </div><!-- .projects__row -->
 
 </section>
