--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,22 +18,22 @@
         <ul class="social social--desktop">
           <li class="social__item">
             <a href="https://www.facebook.com/" target="_blank" class="social__link" title="facebook">
-              <div class="fab fa-facebook-f"><span class="visuallyhidden">facebook</></div>
+              <div class="fab fa-facebook-f"><span class="visuallyhidden">facebook</span></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
           <li class="social__item">
             <a href="https://www.instagram.com/" target="_blank" class="social__link" title="instagram">
-              <div class="fab fa-instagram"></div>
+              <div class="fab fa-instagram"><span class="visuallyhidden">instagram</span></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
           <li class="social__item">
             <a href="https://twitter.com/" target="_blank" class="social__link" title="twitter">
-              <div class="fab fa-twitter"></div>
+              <div class="fab fa-twitter"><span class="visuallyhidden">twitter</span></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
           <li class="social__item">
             <a href="https://uk.linkedin.com/" target="_blank" class="social__link" title="linkedin">
-              <div class="fab fa-linkedin"></div>
+              <div class="fab fa-linkedin"><span class="visuallyhidden">linkedin</span></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
         </ul><!-- .social__link -->
@@ -49,22 +49,22 @@
           <ul class="social social--mobile">
             <li class="social__item">
               <a href="https://www.facebook.com/" target="_blank" class="social__link" title="facebook">
-                <div class="fab fa-facebook-f"></div>
+                <div class="fab fa-facebook-f"><span class="visuallyhidden">facebook</span></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
             <li class="social__item">
               <a href="https://www.instagram.com/" target="_blank" class="social__link" title="instagram">
-                <div class="fab fa-instagram"></div>
+                <div class="fab fa-instagram"><span class="visuallyhidden">instagram</span></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
             <li class="social__item">
               <a href="https://twitter.com/" target="_blank" class="social__link" title="twitter">
-                <div class="fab fa-twitter"></div>
+                <div class="fab fa-twitter"><span class="visuallyhidden">twitter</span></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
             <li class="social__item">
               <a href="https://uk.linkedin.com/" target="_blank" class="social__link" title="linkedin">
-                <div class="fab fa-linkedin"></div>
+                <div class="fab fa-linkedin"><span class="visuallyhidden">linkedin</span></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
           </ul><!-- .social__link --> 
