--- a/_includes/logos.html
+++ b/_includes/logos.html
@@ -4,98 +4,98 @@
 <section class="logos container">
 
     <div class="logos__row row">
-      <a class="logos__item logos__item--1-1" href="https://www.apple.com/" target="_blank" title="Logo 1">
-        <div class="logos__logo brands-apple"></div>
+      <a class="logos__item logos__item--1-1" href="https://www.apple.com/" target="_blank" title="Apple Logo">
+        <div class="logos__logo brands-apple"><span class="visuallyhidden">Apple Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--1-2" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank" title="Logo 2">
-        <div class="logos__logo brands-html5"></div>
+      <a class="logos__item logos__item--1-2" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank" title="HTML5 Logo">
+        <div class="logos__logo brands-html5"><span class="visuallyhidden">HTML5 Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--1-3" href="https://www.kfc.co.uk/" target="_blank" title="Logo 3">
-        <div class="logos__logo brands-kfc"></div>
+      <a class="logos__item logos__item--1-3" href="https://www.kfc.co.uk/" target="_blank" title="KFC Logo">
+        <div class="logos__logo brands-kfc"><span class="visuallyhidden">KFC Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--1-4" href="http://www.getmiro.com/" target="_blank" title="Logo 4">
-        <div class="logos__logo brands-18"></div>
+      <a class="logos__item logos__item--1-4" href="http://www.getmiro.com/" target="_blank" title="Miro Logo">
+        <div class="logos__logo brands-18"><span class="visuallyhidden">Miro Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--1-5" href="http://www.volkswagen.co.uk/" target="_blank" title="Logo 5">
-        <div class="logos__logo brands-vw"></div>
+      <a class="logos__item logos__item--1-5" href="http://www.volkswagen.co.uk/" target="_blank" title="Volkswagen Logo">
+        <div class="logos__logo brands-vw"><span class="visuallyhidden">Volkswagen Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--1-6" href="https://www.ups.com/" target="_blank" title="Logo 6">
-        <div class="logos__logo brands-ups"></div>
+      <a class="logos__item logos__item--1-6" href="https://www.ups.com/" target="_blank" title="UPS Logo">
+        <div class="logos__logo brands-ups"><span class="visuallyhidden">UPS Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--1-7" href="https://www.ubuntu.com/" target="_blank" title="Logo 7">
-        <div class="logos__logo brands-ubuntu"></div>
-      </a><!-- .logos-item -->
-    </div><!-- .logos__row -->
-
-    <div class="logos__row row">
-      <a class="logos__item logos__item--2-1" href="https://www.teamspeak.com/" target="_blank" title="Logo 8">
-        <div class="logos__logo brands-teamspeak"></div>
-      </a><!-- .logos-item -->
-      <a class="logos__item logos__item--2-2 logos__item--active" href="https://www.playstation.com/" target="_blank" title="Logo 9">
-        <div class="logos__logo brands-playstation"></div>
-      </a><!-- .logos-item -->
-      <a class="logos__item logos__item--2-3" href="https://www.microsoft.com/" target="_blank" title="Logo 10">
-        <div class="logos__logo brands-microsoft"></div>
-      </a><!-- .logos-item -->
-      <a class="logos__item logos__item--2-4" href="https://www.bosch.co.uk/" target="_blank" title="Logo 11">
-        <div class="logos__logo brands-bosh"></div>
-      </a><!-- .logos-item -->
-      <a class="logos__item logos__item--2-5" href="https://allegro.pl/" target="_blank" title="Logo 12">
-        <div class="logos__logo brands-allegro"></div>
-      </a><!-- .logos-item -->
-      <a class="logos__item logos__item--2-6" href="https://www.shell.co.uk/" target="_blank" title="Logo 13">
-        <div class="logos__logo brands-shell"></div>
-      </a><!-- .logos-item -->
-      <a class="logos__item logos__item--2-7" href="https://www.nivea.co.uk/" target="_blank" title="Logo 14">
-        <div class="logos__logo brands-nivea"></div>
+      <a class="logos__item logos__item--1-7" href="https://www.ubuntu.com/" target="_blank" title="Ubuntu Logo">
+        <div class="logos__logo brands-ubuntu"><span class="visuallyhidden">Ubuntu Logo</span></div>
       </a><!-- .logos-item -->
     </div><!-- .logos__row -->
 
     <div class="logos__row row">
-      <a class="logos__item logos__item--3-1" href="https://www.lg.com/" target="_blank" title="Logo 15">
-        <div class="logos__logo brands-lg"></div>
+      <a class="logos__item logos__item--2-1" href="https://www.teamspeak.com/" target="_blank" title="TeamSpeak Logo">
+        <div class="logos__logo brands-teamspeak"><span class="visuallyhidden">TeamSpeak Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--3-2" href="https://www.instagram.com/" target="_blank" title="Logo 16">
-        <div class="logos__logo brands-insta"></div>
+      <a class="logos__item logos__item--2-2 logos__item--active" href="https://www.playstation.com/" target="_blank" title="Playstation Logo">
+        <div class="logos__logo brands-playstation"><span class="visuallyhidden">Playstation Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--3-3" href="https://www8.hp.com/us/en/home.html" target="_blank" title="Logo 17">
-        <div class="logos__logo brands-hp"></div>
+      <a class="logos__item logos__item--2-3" href="https://www.microsoft.com/" target="_blank" title="Microsoft Logo">
+        <div class="logos__logo brands-microsoft"><span class="visuallyhidden">Microsoft Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--3-4" href="https://store.steampowered.com/app/70/HalfLife/" target="_blank" title="Logo 18">
-        <div class="logos__logo brands-hf2"></div>
+      <a class="logos__item logos__item--2-4" href="https://www.bosch.co.uk/" target="_blank" title="Bosch Logo">
+        <div class="logos__logo brands-bosh"><span class="visuallyhidden">Bosch Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--3-5" href="https://www.dell.com/" target="_blank" title="Logo 19">
-        <div class="logos__logo brands-dell"></div>
+      <a class="logos__item logos__item--2-5" href="https://allegro.pl/" target="_blank" title="Allegro Logo">
+        <div class="logos__logo brands-allegro"><span class="visuallyhidden">Allegro Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--3-6" href="http://www.coolermaster.com/" target="_blank" title="Logo 20">
-        <div class="logos__logo brands-cooler-master"></div>
+      <a class="logos__item logos__item--2-6" href="https://www.shell.co.uk/" target="_blank" title="Shell Logo">
+        <div class="logos__logo brands-shell"><span class="visuallyhidden">Shell Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--3-7" href="https://www.android.com/" target="_blank" title="Logo 21">
-        <div class="logos__logo brands-android"></div>
+      <a class="logos__item logos__item--2-7" href="https://www.nivea.co.uk/" target="_blank" title="Nivea Logo">
+        <div class="logos__logo brands-nivea"><span class="visuallyhidden">Nivea Logo</span></div>
       </a><!-- .logos-item -->
     </div><!-- .logos__row -->
 
     <div class="logos__row row">
-      <a class="logos__item logos__item--4-1" href="https://www.avg.com/" target="_blank" title="Logo 22">
-        <div class="logos__logo brands-avg"></div>
+      <a class="logos__item logos__item--3-1" href="https://www.lg.com/" target="_blank" title="LG Logo">
+        <div class="logos__logo brands-lg"><span class="visuallyhidden">LG Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--4-2" href="https://www.mitsubishi-cars.co.uk/" target="_blank" title="Logo 23">
-        <div class="logos__logo brands-19"></div>
+      <a class="logos__item logos__item--3-2" href="https://www.instagram.com/" target="_blank" title="Instagram Logo">
+        <div class="logos__logo brands-insta"><span class="visuallyhidden">Instagram Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--4-3" href="https://wordpress.org" target="_blank" title="Logo 24">
-        <div class="logos__logo brands-17"></div>
+      <a class="logos__item logos__item--3-3" href="https://www8.hp.com/us/en/home.html" target="_blank" title="HP Logo">
+        <div class="logos__logo brands-hp"><span class="visuallyhidden">HP Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--4-4" href="https://www.intel.co.uk/" target="_blank" title="Logo 25">
-        <div class="logos__logo brands-intel"></div>
+      <a class="logos__item logos__item--3-4" href="https://store.steampowered.com/app/70/HalfLife/" target="_blank" title="Half Life Logo">
+        <div class="logos__logo brands-hf2"><span class="visuallyhidden">Half Life Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--4-5" href="https://www.ea.com/" target="_blank" title="Logo 26">
-        <div class="logos__logo brands-ea"></div>
+      <a class="logos__item logos__item--3-5" href="https://www.dell.com/" target="_blank" title="Dell Logo">
+        <div class="logos__logo brands-dell"><span class="visuallyhidden">Dell Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--4-6" href="https://www.amd.com/" target="_blank" title="Logo 27">
-        <div class="logos__logo brands-amd"></div>
+      <a class="logos__item logos__item--3-6" href="http://www.coolermaster.com/" target="_blank" title="Coolermaster Logo">
+        <div class="logos__logo brands-cooler-master"><span class="visuallyhidden">Coolermaster Logo</span></div>
       </a><!-- .logos-item -->
-      <a class="logos__item logos__item--4-7" href="https://www.nike.com/" target="_blank" title="Logo 28">
-        <div class="logos__logo brands-nike"></div>
+      <a class="logos__item logos__item--3-7" href="https://www.android.com/" target="_blank" title="Android Logo">
+        <div class="logos__logo brands-android"><span class="visuallyhidden">Android Logo</span></div>
+      </a><!-- .logos-item -->
+    </div><!-- .logos__row -->
+
+    <div class="logos__row row">
+      <a class="logos__item logos__item--4-1" href="https://www.avg.com/" target="_blank" title="AVG Logo">
+        <div class="logos__logo brands-avg"><span class="visuallyhidden">AVG Logo</span></div>
+      </a><!-- .logos-item -->
+      <a class="logos__item logos__item--4-2" href="https://www.mitsubishi-cars.co.uk/" target="_blank" title="Mitsubishi Logo">
+        <div class="logos__logo brands-19"><span class="visuallyhidden">Mitsubishi Logo</span></div>
+      </a><!-- .logos-item -->
+      <a class="logos__item logos__item--4-3" href="https://wordpress.org" target="_blank" title="Wordpress Logo">
+        <div class="logos__logo brands-17"><span class="visuallyhidden">Wordpress Logo</span></div>
+      </a><!-- .logos-item -->
+      <a class="logos__item logos__item--4-4" href="https://www.intel.co.uk/" target="_blank" title="Intel Logo">
+        <div class="logos__logo brands-intel"><span class="visuallyhidden">Intel Logo</span></div>
+      </a><!-- .logos-item -->
+      <a class="logos__item logos__item--4-5" href="https://www.ea.com/" target="_blank" title="EA Logo">
+        <div class="logos__logo brands-ea"><span class="visuallyhidden">EA Logo</span></div>
+      </a><!-- .logos-item -->
+      <a class="logos__item logos__item--4-6" href="https://www.amd.com/" target="_blank" title="AMD Logo">
+        <div class="logos__logo brands-amd"><span class="visuallyhidden">AMD Logo</span></div>
+      </a><!-- .logos-item -->
+      <a class="logos__item logos__item--4-7" href="https://www.nike.com/" target="_blank" title="Nike Logo">
+        <div class="logos__logo brands-nike"><span class="visuallyhidden">Nike Logo</span></div>
       </a><!-- .logos-item -->
     </div><!-- .logos__row -->
   
