--- a/_includes/projects-list.html
+++ b/_includes/projects-list.html
@@ -4,36 +4,36 @@
 <section class="projects container-fluid">
 
   <div class="projects__row row">
-    <a class="projects__item projects__item--1-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 1"></a>
-    <a class="projects__item projects__item--1-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 2"></a>
-    <a class="projects__item projects__item--1-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 3"></a>
-    <a class="projects__item projects__item--1-4" href="http://printwiki.org/Dummy" target="_blank" title="My Project 4"></a>
-    <a class="projects__item projects__item--1-5" href="http://printwiki.org/Dummy" target="_blank" title="My Project 5"></a>
-    <a class="projects__item projects__item--1-6" href="http://printwiki.org/Dummy" target="_blank" title="My Project 6"></a>
-    <a class="projects__item projects__item--1-7" href="http://printwiki.org/Dummy" target="_blank" title="My Project 7"></a>
+    <a class="projects__item projects__item--1-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 1"><span class="visuallyhidden">My Project 1</span></a>
+    <a class="projects__item projects__item--1-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 2"><span class="visuallyhidden">My Project 2</span></a>
+    <a class="projects__item projects__item--1-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 3"><span class="visuallyhidden">My Project 3</span></a>
+    <a class="projects__item projects__item--1-4" href="http://printwiki.org/Dummy" target="_blank" title="My Project 4"><span class="visuallyhidden">My Project 4</span></a>
+    <a class="projects__item projects__item--1-5" href="http://printwiki.org/Dummy" target="_blank" title="My Project 5"><span class="visuallyhidden">My Project 5</span></a>
+    <a class="projects__item projects__item--1-6" href="http://printwiki.org/Dummy" target="_blank" title="My Project 6"><span class="visuallyhidden">My Project 6</span></a>
+    <a class="projects__item projects__item--1-7" href="http://printwiki.org/Dummy" target="_blank" title="My Project 7"><span class="visuallyhidden">My Project 7</span></a>
   </div><!-- .projects__row -->
   <div class="projects__row row">
-    <a class="projects__item projects__item--2-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 8"></a>
-    <a class="projects__item projects__item--active projects__item--2-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 8"></a>
-    <a class="projects__item projects__item--2-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 9"></a>
-    <a class="projects__item projects__item--2-4" href="http://printwiki.org/Dummy" target="_blank" title="My Project 10"></a>
-    <a class="projects__item projects__item--2-5" href="http://printwiki.org/Dummy" target="_blank" title="My Project 12"></a>
-    <a class="projects__item projects__item--2-6" href="http://printwiki.org/Dummy" target="_blank" title="My Project 13"></a>
-    <a class="projects__item projects__item--2-7" href="http://printwiki.org/Dummy" target="_blank" title="My Project 14"></a>
+    <a class="projects__item projects__item--2-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 8"><span class="visuallyhidden">My Project 8</span></a>
+    <a class="projects__item projects__item--active projects__item--2-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 8"><span class="visuallyhidden">My Project 8</span></a>
+    <a class="projects__item projects__item--2-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 9"><span class="visuallyhidden">My Project 9</span></a>
+    <a class="projects__item projects__item--2-4" href="http://printwiki.org/Dummy" target="_blank" title="My Project 10"><span class="visuallyhidden">My Project 10</span></a>
+    <a class="projects__item projects__item--2-5" href="http://printwiki.org/Dummy" target="_blank" title="My Project 12"><span class="visuallyhidden">My Project 12</span></a>
+    <a class="projects__item projects__item--2-6" href="http://printwiki.org/Dummy" target="_blank" title="My Project 13"><span class="visuallyhidden">My Project 13</span></a>
+    <a class="projects__item projects__item--2-7" href="http://printwiki.org/Dummy" target="_blank" title="My Project 14"><span class="visuallyhidden">My Project 14</span></a>
   </div><!-- .projects__row -->
   <div class="projects__row row">
-    <a class="projects__item projects__item--3-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 15"></a>
-    <a class="projects__item projects__item--3-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 16"></a>
-    <a class="projects__item projects__item--3-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 17"></a>
-    <a class="projects__item projects__item--3-4" href="http://printwiki.org/Dummy" target="_blank" title="My Project 18"></a>
-    <a class="projects__item projects__item--3-5" href="http://printwiki.org/Dummy" target="_blank" title="My Project 19"></a>
-    <a class="projects__item projects__item--3-6" href="http://printwiki.org/Dummy" target="_blank" title="My Project 20"></a>
-    <a class="projects__item projects__item--3-7" href="http://printwiki.org/Dummy" target="_blank" title="My Project 21"></a>
+    <a class="projects__item projects__item--3-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 15"><span class="visuallyhidden">My Project 15</span></a>
+    <a class="projects__item projects__item--3-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 16"><span class="visuallyhidden">My Project 16</span></a>
+    <a class="projects__item projects__item--3-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 17"><span class="visuallyhidden">My Project 17</span></a>
+    <a class="projects__item projects__item--3-4" href="http://printwiki.org/Dummy" target="_blank" title="My Project 18"><span class="visuallyhidden">My Project 18</span></a>
+    <a class="projects__item projects__item--3-5" href="http://printwiki.org/Dummy" target="_blank" title="My Project 19"><span class="visuallyhidden">My Project 19</span></a>
+    <a class="projects__item projects__item--3-6" href="http://printwiki.org/Dummy" target="_blank" title="My Project 20"><span class="visuallyhidden">My Project 20</span></a>
+    <a class="projects__item projects__item--3-7" href="http://printwiki.org/Dummy" target="_blank" title="My Project 21"><span class="visuallyhidden">My Project 21</span></a>
   </div><!-- .projects__row -->
   <div class="projects__row row">
-    <a class="projects__item projects__item--4-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 22"></a>
-    <a class="projects__item projects__item--4-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 23"></a>
-    <a class="projects__item projects__item--4-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 24"></a>
+    <a class="projects__item projects__item--4-1" href="http://printwiki.org/Dummy" target="_blank" title="My Project 22"><span class="visuallyhidden">My Project 22</span></a>
+    <a class="projects__item projects__item--4-2" href="http://printwiki.org/Dummy" target="_blank" title="My Project 23"><span class="visuallyhidden">My Project 23</span></a>
+    <a class="projects__item projects__item--4-3" href="http://printwiki.org/Dummy" target="_blank" title="My Project 24"><span class="visuallyhidden">My Project 24</span></a>
   </div><!-- .projects__row -->
 
 </section>
